--- a/.github/workflows/deploy-network.yml
+++ b/.github/workflows/deploy-network.yml
@@ -39,7 +39,7 @@ jobs:
       uses: aws-actions/aws-cloudformation-github-deploy@v1
       with:
         name: "msvc-test"
-        template: ./networking/networking.yaml
+        template: ./networking/networking.yml
         no-fail-on-empty-changeset: "1"
         no-execute-changeset: "1"
         parameter-overrides: >-
@@ -83,7 +83,7 @@ jobs:
       uses: aws-actions/aws-cloudformation-github-deploy@v1
       with:
         name: "networking-service"
-        template: ./networking/netwroking.yaml
+        template: ./networking/netwroking.yml
         no-fail-on-empty-changeset: "1"
         parameter-overrides: >-
           EnvironmentName=poc-test
