--- a/.github/workflows/deploy-network.yml
+++ b/.github/workflows/deploy-network.yml
@@ -44,11 +44,11 @@ jobs:
         no-execute-changeset: "1"
         parameter-overrides: >-
           EnvironmentName=poc-test,
-          VpcCIDR=10.0.0.0/16
-          PublicSubnet1CIDR=10.0.0.0/24
-          PublicSubnet2CIDR=10.0.0.0/24
-          PrivateSubnet1CIDR=10.0.0.0/24
-          PrivateSubnet2CIDR=10.0.0.0/24
+          VpcCIDR=10.0.0.0/16,
+          PublicSubnet1CIDR=10.0.1.0/24,
+          PublicSubnet2CIDR=10.0.2.0/24,
+          PrivateSubnet1CIDR=10.0.3.0/24,
+          PrivateSubnet2CIDR=10.0.4.0/24
   deploy_network:
     name: Deploy network-stack
     if: contains( github.ref, 'develop') || contains( github.ref, 'main')
@@ -87,8 +87,8 @@ jobs:
         no-fail-on-empty-changeset: "1"
         parameter-overrides: >-
           EnvironmentName=poc-test,
-          VpcCIDR=10.0.0.0/16
-          PublicSubnet1CIDR=10.0.1.0/24
-          PublicSubnet2CIDR=10.0.2.0/24
-          PrivateSubnet1CIDR=10.0.3.0/24
+          VpcCIDR=10.0.0.0/16,
+          PublicSubnet1CIDR=10.0.1.0/24,
+          PublicSubnet2CIDR=10.0.2.0/24,
+          PrivateSubnet1CIDR=10.0.3.0/24,
           PrivateSubnet2CIDR=10.0.4.0/24
