--- a/.github/workflows/delete-stack.yml
+++ b/.github/workflows/delete-stack.yml
@@ -24,4 +24,22 @@ jobs:
       id: list
       run: !
         aws cloudformation list-stacks --stack-status-filter CREATE_COMPLETE UPDATE_COMPLETE --max-items 1000 | jq -r 'StackSummaries[].StackName'
+  stack-delete:
+    name: Delete CloudFormation Stack
+    if: "!contains( github.event.inputs.stack-name, 'Change this with CFM Name')"
+    runs-on: ubuntu-latest
+    steps:
+    - name: Configure AWS Credentials
+      id: creds
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.CFM_AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.CFM_AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+    - name: Delete cfm stack
+      id: delete
+      run: |
+        aws cloudformation describe-stacks --stack-name ${{ github.event.inputs.stack-name }}
+        aws cloudformation delete-stack --stack-name ${{ github.event.inputs.stack-name }}
+        aws cloudformation describe-stacks --stack-name ${{ github.event.inputs.stack-name }}
       
